tests/baselines/reference/getJavaScriptSyntacticDiagnostics11.baseline
// === Syntax Diagnostics ===
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics11.ts':
/tests/cases/fourslash/a.js(1,15): error TS8010: Type annotations can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    function F(): number { }
                  ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.